   based header tests begun in Autoconf 2.56.

   The double test that was the default since Autoconf 2.64 is no
   longer available.  You can still request a preprocessor-only test
   by specifying '-' as the fourth argument to either macro, but this
   is now deprecated.  If you really need that behavior use
   AC_PREPROC_IFELSE.

** Macros

- New macro AC_C__GENERIC.

- AC_C_VARARRAYS now defines __STDC_NO_VLA__ if variable-length
  arrays are not supported and if the compiler does not already
  define __STDC_NO_VLA__.  This is for compatibility with C11.
  For backward compatibility with Autoconf 2.61-2.69 AC_C_VARARRAYS
  still defines HAVE_C_VARARRAYS, but this usage is obsolescent.

- AC_CONFIG_MACRO_DIRS
  New macro, used to declare multiple directories when looking for
  local M4 macros.  This macro overcomes some of the shortfalls in the
  older AC_CONFIG_MACRO_DIR, which could only be used once; although
  the older macro remains for compatibility with older tools.  The
  newer macro will be used by the upcoming Automake 1.13 release to
  eliminate the need to specify ACLOCAL_AMFLAGS in Makefile.am.

- AC_PROG_CC now prefers C11 if available, falling back on C99 and
  then on C89 as before.  Similarly, AC_PROG_CXX now prefers C++11
  if available, falling back on C++98.

- AC_PROG_CC is now defined via AC_DEFUN_ONCE, to avoid bloat in 'configure'.

- AC_PROG_CC_STDC, AC_PROG_CC_C89, AC_PROG_CC_C99 have been marked as obsolete.
  Applications should use AC_PROG_CC.

- AC_PROG_YACC now uses 'bison -o y.tab.c' instead of 'bison -y', so that
  by default it no longer warns about Bison extensions.  Add -Wyacc to
  YFLAGS to enable these warnings.

- AC_USE_SYSTEM_EXTENSIONS now enables more system extensions on HP-UX,
  MINIX 3, and OS X.

- AC_CHECK_DECL and AC_CHECK_DECLS can now report missing declarations for
  functions that are also Clang compiler builtins.

- AC_FUNC_VFORK now checks for the signal-handling bug in Solaris 2.4 'vfork'.